--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal form</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/b">website creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -147,14 +147,14 @@
                         <h1>GETModer Early Birds Private Sales Event</h1>
                     </div>
                     <div class="clearfix"></div>
-                    <div id="accordion_22" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
+                    <div id="accordion_21" class="panel-group accordionStyles accordion" role="tablist" aria-multiselectable="true">
                       <div class="accordion-group">
                         <div class="panel panel-default colorBG" style="display: block;">
                             <div class="panel-heading" role="tab" id="headingOne">
                                 <span class="signSpan pseudoMinus"></span>
-                                <h4 class="panel-title"><a role="button" class="text-black collapsed" data-toggle="collapse" data-parent="#accordion_22" data-core="" href="#collapseOne_22" aria-expanded="false" aria-controls="collapseOne"><span class="sign"></span><strong>What is Early Birds Private Sales Event?</strong></a></h4>
+                                <h4 class="panel-title"><a role="button" class="text-black collapsed" data-toggle="collapse" data-parent="#accordion_21" data-core="" href="#collapseOne_21" aria-expanded="false" aria-controls="collapseOne"><span class="sign"></span><strong>What is Early Birds Private Sales Event?</strong></a></h4>
                             </div>
-                            <div id="collapseOne_22" class="panel-collapse noScroll collapse in" role="tabpanel" aria-labelledby="headingOne">
+                            <div id="collapseOne_21" class="panel-collapse noScroll collapse in" role="tabpanel" aria-labelledby="headingOne">
                                 <div class="panel-body"><p>Early Birds Private Sales Event is an exclusive “early bird” opportunity for people to purchase tokens/coins before they go public about the ITO.&nbsp;</p><br><p>The pre-sale usually comes with two main advantages over the public sale:
 </p><p>
 <strong>1)</strong>&nbsp;<span style="font-size: 1rem;">Price. Token prices are much cheaper than in the public sale.&nbsp;</span></p><p><strong>2)</strong> Bonus. Early buyers could benefit from additional free bonus during the pre-sale phase which is often not the case when the token goes to the crowd sale.</p><p><br></p><p>In our case, it is open only to accredited investors. &nbsp;Not everyone gets a chance at the Early Birds offerings, it’s reserved for special groups of people such as such as strategic buyers, family members, close friends, business associates and other members in close circles.&nbsp;</p><br><p>We will soon be inviting a limited number of contributors to take part in the Early Birds Private Sale event. If you are interested in joining the Early Bird Offering for maximum benefits, <a href="page7.html" class="text-primary">please follow this link to get whitelisted</a>.</p></div>
@@ -163,27 +163,27 @@
                         <div class="panel panel-default" style="display: block;">
                             <div class="panel-heading" role="tab" id="headingTwo">
                                 <span class="signSpan pseudoPlus"></span>
-                                <h4 class="panel-title"><a role="button" class="collapsed" data-toggle="collapse" data-parent="#accordion_22" data-core="" href="#collapseTwo_22" aria-expanded="false" aria-controls="collapseTwo"><strong>Details of the Early Birds Event</strong></a></h4>
+                                <h4 class="panel-title"><a role="button" class="collapsed" data-toggle="collapse" data-parent="#accordion_21" data-core="" href="#collapseTwo_21" aria-expanded="false" aria-controls="collapseTwo"><strong>Details of the Early Birds Event</strong></a></h4>
                             </div>
-                            <div id="collapseTwo_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
+                            <div id="collapseTwo_21" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingTwo">
                                 <div class="panel-body">The Private sale starting from April 15th, 2018 and ends on July 15, 2018, or when all of the private sale tokens have been sold, whichever is earlier.<br><br>We have allocated 150 million of the available total token supply towards the private sale in three different stages. <br><br>1 ETH will bring you 12,000 GTMR tokens during Early Birds 1. Please refer to the above table for the token distribution at each stage of the Private Sales Event.<br><br>Hard Cap: 12,500 ETHER<br><br><div>Purchase Currency: ETH is the only currency, which will be accepted for Private sale purchases. We will provide you with the address to which ETH payments must be sent after you are accepted as our Early Birds participant.</div></div>
                             </div>
                         </div>
                         <div class="panel panel-default" style="display: block;">
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <span class="signSpan pseudoPlus"></span>
-                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_22" data-core="" href="#collapseThree_22" aria-expanded="true" aria-controls="collapseThree"><strong>When does the Private Sales Event close? When will the Public Sales occur?</strong></a></h4>
+                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_21" data-core="" href="#collapseThree_21" aria-expanded="true" aria-controls="collapseThree"><strong>When does the Private Sales Event close? When will the Public Sales occur?</strong></a></h4>
                             </div>
-                            <div id="collapseThree_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapseThree_21" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body"><p><span style="font-size: 1rem;">There are only two crowdfunding sales in the GETModer Token Offering Event:&nbsp;</span></p><p><span style="font-size: 1rem;">a) The Early Birds Private Sales</span></p><p><span style="font-size: 1rem;">b) The Public Sales (Pre-ITO &amp; ITO</span></p><p><br></p><p><span style="font-size: 1rem;">Total sales is capped at 12,500 ETHER</span></p><br><p><span style="font-size: 1rem;">In the event of a complete sold out of the 150 million GTMR token during any stage of the Early Birds Private Sales event, GETModer foundation will immediately announce and close the token offering event on this website, without the occurence of the Public Pre-ITO and ITO. GETModer will then proceed to token sales auditing reports, roadmaps and preparation of the exchanges listing which Getmoder will announce with full details on this website.</span><br></p><p><br></p><p>However in the event of any unsold token during the Early Birds event, the unsold tokens will be automatically carried forward to Pre-ITO, date of which will be announced after the completion of the entire Early Birds Event. Hence the Public Sales (Pre-ITO &amp; ITO) will begin after the private sale closes.</p></div>
                             </div>
                         </div>
                         <div class="panel panel-default" style="display: block;">
                             <div class="panel-heading" role="tab" id="headingThree">
                                 <span class="signSpan pseudoPlus"></span>
-                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_22" data-core="" href="#collapseFour_22" aria-expanded="true" aria-controls="collapseFour"><strong>Roadmaps &amp; Team Profile&nbsp;</strong></a></h4>
+                                <h4 class="panel-title"><a role="button" class="" data-toggle="collapse" data-parent="#accordion_21" data-core="" href="#collapseFour_21" aria-expanded="true" aria-controls="collapseFour"><strong>Roadmaps &amp; Team Profile&nbsp;</strong></a></h4>
                             </div>
-                            <div id="collapseFour_22" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
+                            <div id="collapseFour_21" class="panel-collapse noScroll collapse" role="tabpanel" aria-labelledby="headingThree">
                                 <div class="panel-body"><p>The comprehensive Roadmaps &amp; Team Profile details will be published after we have achieved 25% completion of the token sales in the Early Birds event.</p></div>
                             </div>
                         </div>
@@ -313,7 +313,7 @@
         <div class="lead"><div><span style="font-size: 1.07rem;">GETModer is an institutional hybrid blockchain technology company focused on crypto-loan &amp; cryptocurrency exchange. We have developed a highly scalable, secure, permissionary and commercial grade platform architecture powered by Ethereum Network.</span></div><div>
 </div><div><br></div><div><span style="font-size: 1.07rem;">GETModer Ecosystem management team &amp; developer has decided to adopt blockchain crowdfunding mechanism, Initial Token Offering (ITO) to support and fund our future crypto projects.</span></div><div><span style="font-size: 1.07rem;"><br></span></div><div><span style="font-size: 1.07rem;">Initial Token Offering or ITO acts as an entry point for investors to participate in our crypto projects.</span></div><div><br></div><div>
 </div><div>
-</div><div>A total of 251 million GTMR (ERC20) tokens will be generated during the ITO Event, of which 150 million tokens will be available for public investors and the developer team will hold 100 million tokens. 1 million GTMR token will be reserved for Bounty program. The hard cap is set at USD 12,500 Ether. Any unsold token will be kept by GETModer Platform for the lending inventory purposes. The common currency for ITO contribution will be ETHER only. The minimum investment is set as 0.1 ETHER.
+</div><div>A total of 251 million GTMR (ERC20) tokens will be generated during the ITO Event, of which 150 million tokens will be available for public investors and the developer team will hold 100 million tokens. 1 million GTMR token will be reserved for Bounty program. The hard cap is set at 12,500 Ether. Any unsold token will be kept by GETModer Platform for the lending inventory purposes. The common currency for ITO contribution will be ETHER only. The minimum investment is set as 0.1 ETHER.
 </div><div>
 </div><div><br></div><div>The GETModer ITO Contribution Event will be set at two stages,</div><div>1) Early Bird Private Sales Event, </div><div>2) Public Sales (Pre-ITO and ITO)</div><div>
 </div><div><br></div><div>GTMR Token will be listed in minor &amp; major cryptocurrency exchanges. Including LiveCoin, Ku Coin, Poloniex, Binance, Bittrex, HITBTC, CoinExchange, Gate IO &amp; others. The exact exchange listing schedule will be released after the completion of the ITO.</div><div><br></div><div>
