--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free website builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/g">how to create a website for free</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -992,7 +992,7 @@ In case of non-repayment of the loan, the pledged crypto asset will be automatic
             <div class="col-xs-12 text-xs-center">
                 <div class="title_wrapper">
                     <h3 class="mbr-section-title display-2">Roadmap</h3>
-                    <small class="mbr-section-subtitle">GETModer Initial Token Offering</small>
+                    <small class="mbr-section-subtitle">GOTModer Initial Token Offering<br></small>
                 </div>    
             </div>
         </div>    
