--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/i">how to build your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="106" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/j">design a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="106" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="Tu7Edr/xLw7bFGtmAlp40YavilKFhpLeyuAbBa3ixOUtiwSk88t89BOKyTOMzHpRdsaOG+xvvm0KgNvG5dhK7TnK+xUsj223RpuWNZmN4mq/D9P3l/MXucPjNEq77mn4" data-form-email="true">
+                                <input type="hidden" value="leTcKhuRd8lWqzXDitlvUARYa09jDmfZdCnSFT/PpTaMqFpiX/Qx+dwF/5sio+uI9zVbfAqkHNQL2hSFPWj/ox98oj3WeYvTM/AwcbtvaR5q+Ew4ggSa2AseHQtU4eS7" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
