--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/n">bootstrap modal popup</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="78" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/b">web page creator</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="78" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -116,12 +116,12 @@
                 <h3 class="mbr-section-title display-2"><span style="font-size: 17px; font-weight: normal;">GETModer是基于区块链的分散式(去中心化)平台：</span><br><br><span style="font-size: 17px; font-weight: normal;">
 </span><div><span style="font-size: 17px; font-weight: normal;">a）以安全合法的方式借入和借出加密数字货币资产。
 </span></div><div><span style="font-size: 17px; font-weight: normal;">b）与 Instant cryptocurrency Exchange (快速加密数字货币转换/兑换站/中心) 整合为一个平台
-</span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><br><div><span style="font-size: 17px; font-weight: normal;">初期预售优惠配套1（私人销售活动）
-</span></div><div><span style="font-size: 17px;">0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1
+</span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><br><div><span style="font-size: 17px; font-weight: normal;">初期预售优惠配套1（私人销售活动）</span></div><br><div><span style="font-size: 17px; font-weight: normal;">
+</span></div><div><span style="font-size: 17px;">0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1</span></div><br><div><span style="font-size: 17px;">
 </span></div><div><span style="font-size: 17px; font-weight: normal;">（只有一个贡献地址）
 </span></div><br><div><span style="font-size: 17px; font-weight: normal;">◎ 1 ETH (以太币) = 12,000 GTMR代币
 </span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><div><span style="font-size: 17px; font-weight: normal;">◎ 最小贡献0.1 ETH (以太币)</span></div><br><div><span style="font-size: 17px; font-weight: normal;">
-</span></div><span style="font-weight: normal;">◎ 最大贡献 20 ETH (以太币)<br></span><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><div><span style="font-size: 17px; font-weight: normal;">◎ 每个以太坊地址以20个ETH(以太币)为最大贡献，以确保公平分享这个独特的全球参与商业机会</span></div><br><div><span style="font-size: 17px;">0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1
+</span></div><span style="font-weight: normal;">◎ 最大贡献 20 ETH (以太币)<br></span><div><span style="font-size: 17px; font-weight: normal;"><br></span></div><div><span style="font-size: 17px; font-weight: normal;">◎ 每个以太坊地址以20个ETH(以太币)为最大贡献，以确保公平分享这个独特的全球参与商业机会</span></div><br><div><span style="font-size: 17px;">0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1</span></div><br><div><span style="font-size: 17px;">
 </span></div><div><span style="font-size: 17px; font-weight: normal;">（只有一个贡献地址）
 </span></div><div><span style="font-size: 17px; font-weight: normal;"><br></span></div></h3>
                 <small class="mbr-section-subtitle"></small>
@@ -136,7 +136,9 @@
     </div>
 
     <div class="container">
-        <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">GETModer是全球金​​融技术区块链公司和借贷及融资服务供应商，为其贡献者在初期预售优惠配套的预售代币事件中启动私人销售.</span><br><span style="font-weight: normal;">该活动将于2018年4月15日开始.</span></h3>
+        <h3 class="mbr-section-title display-2"><span style="font-weight: normal;">GETModer是全球金​​融技术区块链公司和借贷及融资服务供应商，为其贡献者在初期预售优惠配套的预售代币事件中启动私人销售.</span><br><span style="font-weight: normal;">该活动将于2018年4月15日开始.</span><br><br><span style="font-weight: normal;">初期预售优惠配套1（私人销售活动）
+</span><div>0x36C12Ee2B32e2596DD77B2E252f7A1539D9de4B1
+</div><div><span style="font-weight: normal;">（只有一个贡献地址）</span></div></h3>
     </div>
 
     <div class="container table-wrapper" info3-text="" data-search="false" search-text="Search:" info1-text="Showing" info2-text="" info4-text="">
