create github pages

--- a/page7.html
+++ b/page7.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange/">GETModer Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page8.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange/">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="178" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="178" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="uLY4F9n1r8GwoRC0ARnJx+tJhgaZqey3WYznBw+8GoL7lIm8Egi2fgft5rYrUzZ5chpSm37ccSWx4P4uzmM3vg5nZvdi6qjMhaBxFgxjhP7pQvUBDxwyLuzKRKe2k3OB" data-form-email="true">
+                                <input type="hidden" value="2Fwit3JxbYIkMN4BANRFvrsG0UisMExM8DHvMMxav/JBdrruJcjvfZri3YKOxPGYsuam59tNJK4rAsI9gkENij7Yg0y1iycEPG5d3z+nmTdlHQ6VLDKAf8U1rJqNotkp" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
