--- a/page3.html
+++ b/page3.html
@@ -45,7 +45,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page6.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange/">GETModer Exchange</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">Home</a></li><li class="nav-item"><a class="nav-link link" href="index.html#extToggle1-24">FAQ</a></li><li class="nav-item"><a class="nav-link link" href="page8.html">中文/​普通话</a></li><li class="nav-item"><a class="nav-link link" href="page3.html">Contact</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-warning" href="https://getmoder.exchange/">GETModer Exchange</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">free bootstrap themes</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="152" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-18" data-rv-view="152" style="background-image: url(assets/images/img-extheader13-bg.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);">
     </div>
@@ -87,7 +87,7 @@
                                 <div hidden="" data-form-alert-success="true" class="alert alert-form alert-success text-xs-center">Thanks for filling out form!</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer 2018">
-                                <input type="hidden" value="o4MrVUQ8gZPRJ34pu+9WLnc83CeHDX1j3kt+oLUZh5iRUYY71ADpRHLJg2WVD4kke3oRVlB3fRt3XZSKyVOXm2SoQiLLnplAGzE62tANvMe26CN0K+CaF/OB1AHpGx+v" data-form-email="true">
+                                <input type="hidden" value="DiDe/EzCijg4hcL8SzHKLce/K//OsjImlThs4Aw4udBxAHO3uCpDJQixfo3vSnqGdHz4aeyEJ2nMuXL7l+qX15TlGqYGP8fS8OgGFL1Q897wDWSSg4a3wh1cc+JTq7V2" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
