create github pages

--- a/page7.html
+++ b/page7.html
@@ -58,7 +58,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="178" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
+<section class="engine"><a href="https://mobirise.co/h">how to make a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader13 mbr-after-navbar" id="extHeader13-4s" data-rv-view="178" style="background-image: url(assets/images/141204142054-early-start-background-full-169-1600x900.jpg);">
 
     
 
@@ -87,7 +87,7 @@
 We will contact you very soon regarding our Early Bird 1 offering via email</div>
                             </div>
                             <form action="https://mobirise.com/" method="post" data-form-title="GETModer ITO 2018Early Bird OfferingWhitelisting">
-                                <input type="hidden" value="cSY/IdExtpk3g320Y2uUVcQJ33yXRitp5v0Er3xxmNsxWfdGDbu5XZe+nQwm3J9A5h9Ld3Fi5geU8mJ35ULhpFDc8qBa8JxIu+ARvx43vbUkjotUcKQspaLb1dgx+Ppm" data-form-email="true">
+                                <input type="hidden" value="qrHwtYw+MnuHlGKTktKG99GSpiwoQvrSziLgVPRjEVfUGYIwEBJ22ljloZS46pVcR6YGzecv6Pc1lGpQhyyA5UgXAsHz7B4dmB+Af2fQYL7qO7rmSI1Dpbc9JBclsPil" data-form-email="true">
 
                                     <div class="col-xs-12">
                                          <input type="text" class="form-control" name="name" required="" data-form-field="Name" placeholder="Name*">
