create github pages

--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/d">free website software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="78" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/f">free bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="78" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -156,16 +156,16 @@
 </p><p>1）价格。代币价格比公开销售便宜得多
 </p><p>2）奖金。早期买家可以在预售阶段获得额外的免费红利，而这往往不会发生在当代币进入公开销售阶段
 </p><p>
-</p><p>初期预售优惠配套私人销售活动只对认可的投资者开放。并非每个人都有机会参与Early Birds (初期预售) 的推广活动，而是专门为战略买家，家庭成员，亲密朋友，商业伙伴和其他社会成员等特殊人群提供服务.
+</p><p>初期预售优惠配套私人销售活动只对认可的投资者开放。并非每个人都有机会参与 Early Birds (初期预售) 的推广活动，而是专门为战略买家，家庭成员，亲密朋友，商业伙伴和其他社会成员等特殊人群提供服务.
 </p><p>
-</p><p><br></p><p>我们将很快邀请数量有限的参与者参加Early Birds (初期预售)Private Sale(私人销售)活动。如果您有兴趣参加将提前获得优惠，请点击此链接进入优惠名单.</p><p><br></p><p><strong>2. 初期预售优惠配套细节</strong></p><p>私人销售从2018年4月15日开始，到2018年7月15日结束，或所有私人销售代币已售出，以较早者为准。
+</p><p><br></p><p>我们将很快邀请数量有限的参与者参加 Early Birds (初期预售) Private Sale (私人销售)活动。如果您有兴趣参加将提前获得优惠，请点击此链接进入优惠名单.</p><p><br></p><p><strong>2. 初期预售优惠配套细节</strong></p><p>私人销售从2018年4月15日开始，到2018年7月15日结束，或所有私人销售代币已售出，以较早者为准。
 </p><p>
 </p><p><br></p><p>
-</p><p>1 ETH (以太币) 将在初期预售优惠配套(一)期间为您带来6,000个GTMR代币。请参阅上表，了解私人销售活动每个阶段的代币分配情况。
+</p><p>1 ETH (以太币) 将在初期预售优惠配套(1)期间为您带来 6,000 个 GTMR 代币。请参阅上表，了解私人销售活动每个阶段的代币分配情况。
 </p><p>
 </p><p><br></p><p>销售额上限：25,000 &nbsp;ETHER (以太币)
 </p><p>
-</p><p><br></p><p>购买代币：ETH(以太币)是唯一的代币，将被接受为私人销售期间的购买代币。我们将向您提供ETH(以太币)付款发送的地址当您被接纳为我们的Early Birds 参与者.</p><p><br></p><p><strong>3. 私人销售活动何时关闭？公开销售何时会进行？</strong></p><p>GETModer初始代币发行:
+</p><p><br></p><p>购买代币：ETH (以太币)是唯一的代币，将被接受为私人销售期间的购买代币。我们将向您提供ETH(以太币)付款发送的地址当您被接纳为我们的Early Birds 参与者.</p><p><br></p><p><strong>3. 私人销售活动何时关闭？公开销售何时会进行？</strong></p><p>GETModer初始代币发行:
 </p><p>a）初期预售优惠配套的私人销售
 </p><p>b）公开销售（Pre-ITO＆ITO)</p><p><br></p><p>总销售额上限为25,000 ETHER (以太币)</p><p><br></p><p>如果在Early Birds Private Sales(初期预售优惠配套的私人销售)活动中的任何阶段完全售罄1.5亿GTMR代币，GETModer基金会将立即在本网站上宣布和结束代币活动，而不会发行Public Pre-ITO和ITO。然后，GETModer将继续进行代币销售审计报告，路线图和准备Getmoder将公布的交易所信息，并在此网站上提供详细信息。</p><p><br></p><p>但是，如果在Early Birds(初期预售优惠配套)事件期间出现任何未售出的代币，这些未售出的代币将自动转移至Pre-ITO，其日期将在整个Early Birds(初期预售优惠配套)事件完成后公布。因此，公开销售（Pre-ITO和ITO）将在私人销售结束后开始。</p><p><br></p><p><strong>4. 路线图和团队简介
 </strong></p><p>在完成Roadmaps (路线图)＆Team Profile(团队简介)详细信息后，我们将会在Early Birds(初期预售优惠配套)活动中完成代币销售25％后发布。</p><p><br></p></blockquote></div>
