create github pages

--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/l">bootstrap theme</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="556" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="556" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -157,7 +157,7 @@
 </p><p>
 </p><p>初期预售优惠配套私人销售活动只对认可的投资者开放。并非每个人都有机会参与 Early Birds (初期预售) 的推广活动，而是专门为战略买家，家庭成员，亲密朋友，商业伙伴和其他社会成员等特殊人群提供服务.
 </p><p>
-</p><p><br></p><p>我们将很快邀请数量有限的参与者参加 Early Birds (初期预售) Private Sale (私人销售)活动。如果您有兴趣参加将提前获得优惠，请<a href="page7.html">点击此链</a>接进入优惠名单.</p><p><br></p><p><strong>2. 初期预售优惠配套细节</strong></p><p>私人销售从2018年4月15日开始，到2018年7月15日结束，或所有私人销售代币已售出，以较早者为准。
+</p><p><br></p><p>我们将很快邀请数量有限的参与者参加 Early Birds (初期预售) Private Sale (私人销售)活动。如果您有兴趣参加将提前获得优惠，请与我们联系.</p><p><br></p><p><strong>2. 初期预售优惠配套细节</strong></p><p>私人销售从2018年4月15日开始，到2018年7月15日结束，或所有私人销售代币已售出，以较早者为准。
 </p><p>
 </p><p><br></p><p>
 </p><p>1 ETH (以太币) 将在初期预售优惠配套(1)期间为您带来 6,000 个 GTMR 代币。请参阅上表，了解私人销售活动每个阶段的代币分配情况。
@@ -1180,7 +1180,7 @@
                                 <h4 class="panel-title"><a role="button" class="text-white" data-toggle="collapse" data-core="" href="#collapseFourextToggle1-6l" aria-expanded="true" aria-controls="collapseFour">社交网络</a></h4>
                             </div>
                             <div id="collapseFourextToggle1-6l" class="panel-collapse noScroll collapse">
-                                <div class="panel-body"><p>我们的营销团队将在完成Early Birds Private Sales Event后开始在各种社交网络上推广GETModer (格摩特)项目。同时，如果您有兴趣参加Early Birds活动，请与我们<a href="page7.html">联系</a>。</p></div>
+                                <div class="panel-body"><p>我们的营销团队将在完成Early Birds Private Sales Event后开始在各种社交网络上推广GETModer (格摩特)项目。同时，如果您有兴趣参加Early Birds活动，请与我们联系。</p></div>
                             </div>
                         </div>
                         <div class="toggle-default" style="display: block;">
