create github pages

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/q">bootstrap slideshow</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/h">how to make your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -218,7 +218,7 @@
 
     <div class="container table-wrapper" info3-text="(filtered from" data-search="false" search-text="Search:" info1-text="Showing" info2-text="entries" info4-text="total entries)">
         
-        <table class="table" cellspacing="0" width="100%"><thead><tr><th>Subject</th><th>Details</th></tr></thead><tbody><tr><td><strong>Token</strong></td><td><span style="font-size: 17px;"><strong>GETmoder</strong></span></td></tr><tr><td><strong>Symbol</strong></td><td><span style="font-size: 17px;"><strong>GTMR</strong></span></td></tr><tr><td><strong>Network</strong></td><td><strong>Ethereum</strong></td></tr><tr><td><strong>Total Supply</strong></td><td><strong>251 M</strong></td></tr><tr><td><strong>Circulating</strong></td><td><strong>150 M</strong></td></tr><tr><td><strong>Early Birds Event</strong><br><strong>Starting</strong></td><td><strong>15 April 2018</strong></td></tr><tr><td><strong>Early Birds Event
+        <table class="table" cellspacing="0" width="100%"><thead><tr><th>Subject</th><th>Details</th></tr></thead><tbody><tr><td><strong>Token</strong></td><td><span style="font-size: 17px;"><strong>GETModer</strong></span></td></tr><tr><td><strong>Symbol</strong></td><td><span style="font-size: 17px;"><strong>GTMR</strong></span></td></tr><tr><td><strong>Network</strong></td><td><strong>Ethereum</strong></td></tr><tr><td><strong>Total Supply</strong></td><td><strong>251 M</strong></td></tr><tr><td><strong>Circulating</strong></td><td><strong>150 M</strong></td></tr><tr><td><strong>Early Birds Event</strong><br><strong>Starting</strong></td><td><strong>15 April 2018</strong></td></tr><tr><td><strong>Early Birds Event
 <br></strong><strong>Ending</strong></td><td><strong>15 July 2018</strong></td></tr><tr><td><strong>Minimum</strong><br><strong>Maximum</strong></td><td><strong>0.1 ETH</strong><br><strong>20 ETH</strong></td></tr><tr><td><strong>Pre-ITO</strong></td><td><strong>To be announced</strong></td></tr><tr><td><strong>ITO</strong></td><td><strong>To be announced
 <br></strong></td></tr><tr><td><strong>Crowdfunding </strong><br><strong>Currency</strong></td><td><strong>ETHER</strong></td></tr><tr><td><span style="font-size: 17px;"><strong>Hard Cap</strong></span></td><td><span style="font-size: 17px;"><strong>25,000 ETHER</strong></span></td></tr><tr><td><span style="font-size: 17px;"><strong>Bounty</strong></span></td><td><strong>1 M Token</strong></td></tr></tbody></table>
         
