--- a/page8.html
+++ b/page8.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/f">bootstrap builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="556" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.co/o">bootstrap button</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-5q" data-rv-view="556" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -167,7 +167,7 @@
 </p><p><br></p><p>购买代币：ETH (以太币)是唯一的代币，将被接受为私人销售期间的购买代币。我们将向您提供 ETH (以太币)付款发送的地址当您被接纳为我们的 Early Birds 参与者.</p><p><br></p><p><strong>3. 私人销售活动何时关闭？公开销售何时会进行？</strong></p><p>GETModer (格摩特)初始代币发行:
 </p><p>a）初期预售优惠配套的私人销售
 </p><p>b）公开销售（Pre-ITO＆ITO)</p><p><br></p><p>总销售额上限为25,000 ETHER (以太币)</p><p><br></p><p>如果在 Early Birds Private Sales (初期预售优惠配套的私人销售)活动中的任何阶段完全售罄1.5亿 GTMR代币，GETModer (格摩特)基金会将立即在本网站上宣布和结束代币活动，而不会发行Public Pre-ITO和ITO。然后，GETModer(格摩特)将继续进行代币销售审计报告，路线图和准备Getmoder(格摩特)将公布的交易所信息，并在此网站上提供详细信息。</p><p><br></p><p>但是，如果在Early Birds(初期预售优惠配套)事件期间出现任何未售出的代币，这些未售出的代币将自动转移至Pre-ITO，其日期将在整个Early Birds(初期预售优惠配套)事件完成后公布。因此，公开销售（Pre-ITO和ITO）将在私人销售结束后开始。</p><p><br></p><p><strong>4. 路线图和团队简介
-</strong></p><p>我们将会在Early Birds (初期预售优惠配套)活动中完成代币销售25％后发布Roadmaps (路线图)＆Team Profile (团队简介)详细信息.</p><p><br></p></blockquote></div>
+</strong></p><p>我们将会在Early Birds (初期预售优惠配套)活动中完成代币销售25％后发布 Roadmaps (路线图)＆Team Profile (团队简介)详细信息.</p><p><br></p></blockquote></div>
         </div>
     </div>
 
@@ -177,10 +177,10 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 lead"><p><span style="font-size: 1.07rem;">每逢在发送ETH之前，请检查URL并验证贡献地址</span><br></p><div>我们只接受 ETH</div><div>最低贡献 0.1 ETH</div><div>最大贡献 20 ETH</div><div><br></div><div>◎请使用IMToken Wallet，TRUST Wallet或MyEtherWallet来接收您的代币
+            <div class="col-xs-12 lead"><p><span style="font-size: 1.07rem;">每逢在发送ETH之前，请检查URL并验证贡献地址</span><br></p><div>我们只接受 ETH</div><div>最低贡献 0.1 ETH</div><div>最大贡献 20 ETH</div><div><br></div><div>◎请使用 IMToken Wallet，TRUST Wallet 或 MyEtherWallet 来接收您的代币
 </div><div>◎由于不能预知交易的流量，请允许我们在24小时之内将我们的代
-</div><div>币转入给您的ERC20电子钱包.</div><div><br></div><div>确保您所使用的钱包能支持ERC20代币或则您有掌控那钱包的私钥
-<span style="font-size: 1.07rem;">，才能使用那钱包的地址来发送Ether</span></div><div><span style="font-size: 1.07rem;">否则，您将无法使用&nbsp;</span><span style="font-size: 1.07rem;">GTMR代币. 不要直接将ETH(以太币)从交易所发送到贡献地址.</span></div><p></p></div>
+</div><div>币转入给您的 ERC20电子钱包.</div><div><br></div><div>确保您所使用的钱包能支持 ERC20代币或则您有掌控那钱包的私钥
+<span style="font-size: 1.07rem;">，才能使用那钱包的地址来发送 Ether</span></div><div><span style="font-size: 1.07rem;">否则，您将无法使用&nbsp;</span><span style="font-size: 1.07rem;">GTMR代币. 不要直接将 ETH (以太币)从交易所发送到贡献地址.</span></div><p></p></div>
         </div>
     </div>
 
@@ -197,7 +197,7 @@
 
     <div class="container table-wrapper" info3-text="(filtered from" data-search="false" search-text="Search:" info1-text="Showing" info2-text="entries" info4-text="total entries)">
         
-        <table class="table" cellspacing="0" width="100%"><thead><tr><th>项目</th><th>细节</th></tr></thead><tbody><tr><td><strong>代币</strong></td><td><span style="font-size: 17px;"><strong>GETmoder</strong></span><br><span style="font-size: 17px;"><strong>格摩特</strong></span></td></tr><tr><td><strong>符号</strong></td><td><span style="font-size: 17px;"><strong>GTMR</strong></span></td></tr><tr><td><strong>网络</strong></td><td><strong>以太坊</strong></td></tr><tr><td><strong>总共数量</strong></td><td><strong>2.51亿</strong></td></tr><tr><td><strong>市场流通</strong></td><td><strong>1.50亿</strong></td></tr><tr><td><strong>代币首次發售</strong><br><strong>(Early Birds)</strong><br><strong>开始</strong></td><td><strong>4月15日 2018</strong></td></tr><tr><td><strong>代币首次發售
+        <table class="table" cellspacing="0" width="100%"><thead><tr><th>项目</th><th>细节</th></tr></thead><tbody><tr><td><strong>代币</strong></td><td><span style="font-size: 17px;"><strong>GETModer</strong></span><br><span style="font-size: 17px;"><strong>格摩特</strong></span></td></tr><tr><td><strong>符号</strong></td><td><span style="font-size: 17px;"><strong>GTMR</strong></span></td></tr><tr><td><strong>网络</strong></td><td><strong>以太坊</strong></td></tr><tr><td><strong>总共数量</strong></td><td><strong>2.51亿</strong></td></tr><tr><td><strong>市场流通</strong></td><td><strong>1.50亿</strong></td></tr><tr><td><strong>代币首次發售</strong><br><strong>(Early Birds)</strong><br><strong>开始</strong></td><td><strong>4月15日 2018</strong></td></tr><tr><td><strong>代币首次發售
 <br>(Early Birds)<br>结束</strong></td><td><strong>7月15日 2018</strong></td></tr><tr><td><strong>最低贡献</strong><br><strong>最大贡献</strong></td><td><strong>0.1 ETH</strong><br><strong>20 ETH</strong></td></tr><tr><td><strong>Pre-ITO</strong></td><td><strong>将会公布</strong></td></tr><tr><td><strong>ITO</strong></td><td><strong>将会公布
 <br></strong></td></tr><tr><td><strong>众筹资助代币</strong></td><td><strong>ETHER (以太币)</strong></td></tr><tr><td><strong>总共众筹目标</strong></td><td><span style="font-size: 17px;"><strong>25,000 ETHER</strong></span></td></tr><tr><td><span style="font-size: 17px;"><strong>赏金</strong></span></td><td><strong>100万代币</strong></td></tr></tbody></table>
         
@@ -215,11 +215,11 @@
 </p><p>利率：我们的平台不提供预定的利率，它们完全取决于市场，由贷款人和借款人设定。</p><p><br></p><p><strong>2. GTMR ITO 的资金目标？</strong></p><p>25,000 ETHER(以太币)</p><p><br></p><p>量总计为2.51亿代币。奖金计划为100万美元。
 </p><p><br></p><p>开发人员将持有1亿代币
 </p><p><br></p><p>1.5亿GTMR代币将公开发售，分为</p><p>- 初期预售 (Early Bird) </p><p>- 預售ITO</p><p>- ITO</p><p><br></p><p><strong>3. 会有后续销售吗？
-</strong></p><p>不会。在代币销售后不会有更多的GTMR可供出售。</p><p><br></p><p><strong>4. 募集资金的使用情况？</strong></p><p>ETH(以太坊)将用于进一步开发GETModer平台和未来项目背后的技术。
-</p><p>以下提供了GETModer的资金分配 ：
+</strong></p><p>不会。在代币销售后不会有更多的GTMR可供出售。</p><p><br></p><p><strong>4. 募集资金的使用情况？</strong></p><p>ETH(以太坊)将用于进一步开发GETModer (格摩特) 平台和未来项目背后的技术。
+</p><p>以下提供了GETModer (格摩特)的资金分配 ：
 </p><p>30％用于核心发展
 </p><p>20％用于用户体验发展
-</p><p>20%用于GETModer管理
+</p><p>20%用于GETModer (格摩特) 管理
 </p><p>20%用于促销活动
 </p><p>10％用于额外不在预期的费用</p><p><br></p><p><strong>5. </strong><span style="font-size: 1.07rem;"><strong>代币价格</strong>&nbsp;</span></p><p>GTMR代币将被列入次要和主要加密货币交易所。包括LiveCoin， Ku Coin，Poloneix，Binance，Bittrex，HITBTC，CoinExchange
 </p><p>，Gate IO等。投放市场的时间表将在ITO完成后发布。
@@ -244,9 +244,9 @@
 </span><span style="font-weight: normal;">货币贷款，与 instant Cryptocurrency Exchange (加密数字货币转换
 /兑换站/中心) 整合，推动其主要核心业务。</span></h3>
         <div class="lead"><div><span style="font-size: 1.07rem;">GETModer(格摩特)是一家专注于加密数字货币贷款和加密数字货币交换站/ 中心的机构混合型区块链技术公司。我们开发了以太坊网络支持的高度可扩展，安全，许可和商业级平台架构。</span></div><div>
-</div><div><br></div><div><span style="font-size: 1.07rem;">GETModer(格摩特)生态系统管理团队和开发商已决定采用区块链众筹机制初始代币发售（ITO）来支持和资助我们未来的加密数字货币项目</span></div><div><span style="font-size: 1.07rem;"><br></span></div><div><span style="font-size: 1.07rem;">最初的代币发行或ITO是投资者参与我们的加密数字货币项目的切入点。</span></div><div><br></div><div>
+</div><div><br></div><div><span style="font-size: 1.07rem;">GETModer(格摩特)生态系统管理团队和开发商已决定采用区块链众筹机制初始代币发售 (ITO)来支持和资助我们未来的加密数字货币项目</span></div><div><span style="font-size: 1.07rem;"><br></span></div><div><span style="font-size: 1.07rem;">GTMR 代币发行或ITO是投资者参与我们的加密数字货币项目的切入点。</span></div><div><br></div><div>
 </div><div>
-</div><div>在ITO活动期间将产生总计2.51亿个GTMR（ERC20）代币，其中<span style="font-size: 1.07rem;">1.5亿代币可用于公众投资者，开发团队将持有1亿代币。1 百万&nbsp;</span><span style="font-size: 1.07rem;">GTMR 代币将保留给赏金计划。总共众筹目标设定为25,000 ETHER。ITO活动结束后, 任何未售出的代币, GETModer平台将保留任何未售出的代币用于贷款库存目的。 ITO贡献的通用货币仅限 ETHER (以太币)。最小贡献为0.1 ETHER(以太币)。最大贡献 20 ETH (以太币)</span></div><div><br></div><div>GETModer(格摩特)代币发售将分为:</div><div>1) Early Bird (初期预售)</div><div>2) Pre-ITO (预售)</div><div>3) ITO</div><div><br></div><div>Early Bird (初期预售)官方贡献活动将于2018年4月15日开始，并于2018年7月15日结束。</div><div><br></div><div>GTMR代币将被列入次要和主要加密货币交易所。包括LiveCoin， Ku Coin，Poloniex，Binance，Bittrex，HITBTC，CoinExchange
+</div><div>在ITO活动期间将产生总计2.51亿个GTMR（ERC20）代币，其中<span style="font-size: 1.07rem;">1.5亿代币可用于公众投资者，开发团队将持有1亿代币。1 百万&nbsp;</span><span style="font-size: 1.07rem;">GTMR 代币将保留给赏金计划。总共众筹目标设定为25,000 ETHER。ITO活动结束后, 任何未售出的代币, GETModer &nbsp;(格摩特) 平台将保留任何未售出的代币用于贷款库存目的。 ITO贡献的通用货币仅限 ETHER (以太币)。最小贡献为0.1 ETHER(以太币)。最大贡献 20 ETH (以太币)</span></div><div><br></div><div>GETModer(格摩特)代币发售将分为:</div><div>1) Early Bird (初期预售)</div><div>2) Pre-ITO (预售)</div><div>3) ITO</div><div><br></div><div>Early Bird (初期预售)官方贡献活动将于2018年4月15日开始，并于2018年7月15日结束。</div><div><br></div><div>GTMR代币将被列入次要和主要加密货币交易所。包括LiveCoin， Ku Coin，Poloniex，Binance，Bittrex，HITBTC，CoinExchange
 </div><div>，Gate IO等。确切上市到交易平台的时间表将在 ITO 完成后发布。</div><div><br></div><div>
 </div><div><strong>代币定价
 </strong></div><div>预计首次上市价格将约为 0.12 美元
@@ -273,7 +273,7 @@
             <div class="container">
                 <div class="mbr-section row">
                     <div>
-                            <h3 class="mbr-section-title display-2 text-center">GETModer (格摩特)</h3>
+                            <h3 class="mbr-section-title display-2 text-center">GETModer<br>(格摩特)</h3>
 
                             <div class="mbr-section-text lead text-center">
                                 <p>GETMODER (格摩特)是一个以去中心化区块链的市场來讓数字资产能够安全和合法的方式來借贷和支付. 与此同时经营即时数字货币兑换中心
@@ -440,7 +440,7 @@
                 <div class="lead"><p><strong>GETModer(格摩特)生态系统
 </strong></p><p>在其历史发展中，GETModer (格摩特)通过创造创新和便利的融资解决方案
 </p><p>GETModer (格摩特)已有被识别成功解决借贷市场的低效问题
-</p><p>通过应用区块链技术，GTMR代币是GETModer解决新数字经济融
+</p><p>通过应用区块链技术，GTMR代币是GETModer (格摩特) 解决新数字经济融
 </p><p>资不足问题的答案/解决方案。</p><p><br></p><p><strong>GETModer (格摩特)生态系统包括：</strong>
 </p><p>a）加密数字货币的借贷
 </p><p>b）加密数字货币的即时兑换站</p><p><strong><br></strong></p><p>实用程序代币：GETModer (格摩特)</p><p>区块链：以太坊符 号</p><p>GTMR 总计：2.51亿
@@ -449,7 +449,7 @@
 </p><p>
 </p><p>会阻止加密货币持有者获得任何未来资产价值的增长的利益 ; 低价购买的持有者需要保留自己的投资，以便将来在高价位时卖出从中获益。
 </p><p>利用区块链和智能合约为去中心化借贷协议提供去中心化且安全的金融市场。</p><div><strong>
-</strong></div><div><strong><br></strong></div><div><strong>对于借款人：</strong>GETModer (格摩特)平台允许您根据您的加密货币资产所持有的当前价值进行流动资金的即时借款。你可拿到一笔贷款，用比特币或以太币等资产进行抵押 - 并以此获得一笔稳定货币的商业贷款。偿还贷款后，你便收到你的全部抵押品;即使抵押品己经增值多次。这样，您就可以获得流动资金以满足当前的需求，并且可以在高贷款率的同时拥有同样的数字货币。</div><div><br></div><div><strong>对于贷款人：</strong>借贷机会开放给全球市场/希望成为贷款人的任何人开放。我们保证全额还款和无风险，因为所有贷款都有借款人的加密数字货币资产为担保。</div><div><br></div><div><strong>奖励措施：</strong>我们的加密数字货币项目的参与者（请参阅下面的&nbsp;<span style="font-size: 1.07rem;">GETModer 格摩特ITO）将享有贷款和借款的特殊费率。</span></div><div>
+</strong></div><div><strong><br></strong></div><div><strong>对于借款人：</strong>GETModer (格摩特)平台允许您根据您的加密货币资产所持有的当前价值进行流动资金的即时借款。你可拿到一笔贷款，用比特币或以太币等资产进行抵押 - 并以此获得一笔稳定货币的商业贷款。偿还贷款后，你便收到你的全部抵押品;即使抵押品己经增值多次。这样，您就可以获得流动资金以满足当前的需求，并且可以在高贷款率的同时拥有同样的数字货币。</div><div><br></div><div><strong>对于贷款人：</strong>借贷机会开放给全球市场/希望成为贷款人的任何人开放。我们保证全额还款和无风险，因为所有贷款都有借款人的加密数字货币资产为担保。</div><div><br></div><div><strong>奖励措施：</strong>我们的加密数字货币项目的参与者（请参阅下面的&nbsp;<span style="font-size: 1.07rem;">GETModer 格摩特 ITO）将享有贷款和借款的特殊费率。</span></div><div>
 </div><div><strong><br></strong></div><div><strong>利润目标：</strong>贷款和借款的手续费目标：每天120万美元的融资额</div><div><strong></strong></div><div><span style="font-size: 1.07rem;"><strong><br></strong></span></div><div><br></div><div>
 </div><div>
 </div><div><strong>B)&nbsp;</strong><strong>即时加密数字货币兑换站</strong></div><div>我们的即时钱包与钱包交换允许您交换加密数字货币，无需在任何交易所注册或需要验证。总公司已有超过700,000名客户，每月处理超过50,000 BTC。我们的平台与Jaxx, Coinmarketcap，Bittrex
@@ -604,7 +604,8 @@
                 <div class="row">
                     <div id="title">
                         <div class="span-title">
-                            <span class="mbr-section-title display-2 text-center pad-r">为早期/初期预售参与者介绍GETModer (格摩特)代币<br></span>
+                            <span class="mbr-section-title display-2 text-center pad-r">GETModer(格摩特)代币发售
+<br>符号：GTMR<br></span>
                             <span class="mbr-section-title display-2">
                             </span>
                         </div>
