create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/d">best free web page software</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
+<section class="engine"><a href="https://mobirise.ws/h">how to make free website</a></section><section class="mbr-section mbr-section-hero mbr-section-full extHeader15 mbr-after-navbar" id="extHeader15-51" data-rv-view="2" style="background-image: url(assets/images/contact-bg-1960x1000.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.3; background-color: rgb(41, 105, 176);">
     </div>
@@ -80,10 +80,10 @@
                         <div class="mbr-section-text lead text-center">
                             <p><span style="font-style: normal;"><strong>GETModer
 <br>Early Birds Private Sales</strong></span><br><span style="font-style: normal;"><strong>Starting 15 April 2018
-<br>Ending 15 July 2018</strong></span><span style="font-style: normal;"><strong><br></strong></span><span style="font-style: normal;"><strong>1 ETH = 6,000 GTMR Token</strong></span><br><span style="font-style: normal;"><strong>Pre-ITO &amp; ITO: To be announced</strong></span><br><span style="font-style: normal;"><strong>Minimum Contribution 0.1 ETH</strong></span><br><span style="font-style: normal;"><strong>Maximum Contribution 20 ETH</strong></span><span style="font-style: normal;"><strong><a href="index.html#extMsg-box4-1n" class="text-warning"><br></a></strong></span></p>
+<br>Ending 15 July 2018</strong></span><span style="font-style: normal;"><strong><br></strong></span><span style="font-style: normal;"><strong>1 ETH = 6,000 GTMR Token</strong></span><br><span style="font-style: normal;"><strong>Pre-ITO &amp; ITO: To be announced</strong></span><br><span style="font-style: normal;"><strong>Minimum Contribution 0.1 ETH</strong></span><br><span style="font-style: normal;"><strong>Maximum Contribution 20 ETH</strong></span><br><span style="font-style: normal;"><strong><a href="index.html#extMsg-box4-1n" class="text-warning"><br></a></strong></span><br><span style="font-style: normal;"><strong>End in&nbsp;</strong></span></p>
                         </div>
 
-                        <div class="countdown" data-end="2018/04/15"></div>
+                        <div class="countdown" data-end="2018/07/15"></div>
 
                     </div>
                     
